--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,17 +16,13 @@
         android:id="@+id/action_refresh2"
         android:orderInCategory="100"
         android:title="@string/action_refresh"
-        app:showAsAction="never"
-        android:visible="false" />
+        android:visible="false"
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_update"
         android:orderInCategory="100"
         android:title="@string/menu_update"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_language"
-        android:orderInCategory="100"
-        android:title="@string/menu_language"
+        android:visible="false"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_profiles"
@@ -37,12 +33,13 @@
         android:id="@+id/action_changelog"
         android:orderInCategory="100"
         android:title="@string/changelog"
+        android:visible="false"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_impressum"
         android:orderInCategory="100"
         android:title="@string/menu_impressum"
-        android:visible="false"
+        android:visible="true"
         app:showAsAction="never" />
 
 </menu>
