--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -8,6 +8,7 @@
         <change>Dark Mode (Themeauswahl)</change>
         <change>Notenverwaltung gefixed</change>
         <change>Farbenauswahl (Beta)</change>
+        <change>Einstellungen überarbeitet</change>
         <change>Benachrichtigung über fehlendes Internet (-> Nutzung des Offlinemodus)</change>
         <change>Bugfixes</change>
     </release>
