--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -21,8 +21,7 @@
         <RelativeLayout
             android:id="@+id/main_spinner_relative"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#f00">
+            android:layout_height="wrap_content">
 
             <Spinner
                 android:id="@+id/main_profile_spinner"
