--- a/app/src/main/res/xml/preferences_vertretungsplan.xml
+++ b/app/src/main/res/xml/preferences_vertretungsplan.xml
@@ -26,4 +26,8 @@
         android:defaultValue="true"
         android:key="show_sections"
         android:title="@string/set_design_show_sections" />
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="old_vertretung"
+        android:title="@string/set_old_vertretung" />
 </PreferenceScreen>
