--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
     <release
+        version="1.1.2"
+        versioncode="112">
+        <change>Speicherplatz reduziert</change>
+        <change>Bugfixes</change>
+    </release>
+    <release
         version="1.1.1"
         versioncode="111">
         <change>Einführung hinzugefügt</change>
