--- a/app/src/main/res/layout/card_about_app.xml
+++ b/app/src/main/res/layout/card_about_app.xml
@@ -67,7 +67,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/version"
+                    android:text="1.1.1"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
                 <TextView
