--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_main"
-    android:id="@+id/main_constraint">
+    tools:showIn="@layout/app_bar_main">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
