--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowActionBarOverlay">true</item>
         <item name="md_dark_theme">false</item>
-        <item name="cardBackgroundColor">@color/md_white_1000</item>
+        <item name="cardBackgroundColor">@android:color/white</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
         <item name="popupMenuStyle">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
@@ -32,8 +32,8 @@
 
     <style name="AppTheme.Black" parent="AppTheme.Dark">
         <item name="android:windowBackground">@android:color/black</item>
-        <item name="cardBackgroundColor">@color/md_grey_900</item>
-        <item name="md_background_color">@color/md_grey_900</item>
+        <item name="cardBackgroundColor">@color/grey</item>
+        <item name="md_background_color">@color/grey</item>
         <item name="popupMenuStyle">@style/PopupMenuBlack</item>
     </style>
 
