--- a/app/src/main/res/layout/list_vertretung_specific_entry.xml
+++ b/app/src/main/res/layout/list_vertretung_specific_entry.xml
@@ -35,6 +35,7 @@
 
     <TextView
         android:id="@+id/vertretung_specific_entry_textViewTeacher"
+        android:layout_gravity="center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
