--- a/app/src/main/res/xml/vertretungsplan_widget_info.xml
+++ b/app/src/main/res/xml/vertretungsplan_widget_info.xml
@@ -7,4 +7,4 @@
     android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="7200000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen" />
