--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,9 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+
+    <!-- Widget -->
+    <dimen name="widget_image_height">35dp</dimen>
+    <dimen name="widget_image_width">40dp</dimen>
+
 </resources>
