--- a/app/src/main/res/layout/widget_list_entry.xml
+++ b/app/src/main/res/layout/widget_list_entry.xml
@@ -5,8 +5,7 @@
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
     android:gravity="center"
-    android:orientation="horizontal"
-    android:id="@+id/widget_entry_linear">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/vertretung_specific_entry_textViewHour"
