--- a/app/src/main/res/layout/widget_main.xml
+++ b/app/src/main/res/layout/widget_main.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/widget2_frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/widget_background">
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/widget2_listview"
