--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -4,6 +4,8 @@
         version="1.1.2"
         versioncode="112">
         <change>Neues Widget</change>
+        <change>Knopf für die Schnelleinstellungen in der Benachrichtiungsleiste hinzugefügt
+        </change>
         <change>Nutzerzähler</change>
         <change>Speicherplatz reduziert</change>
         <change>Bugfixes</change>
