widget changed to kotlin with new design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,7 @@
     <color name="grey">#212121</color>
 
     <!-- Widget -->
+    <color name="widget_white">#D9FFFFFF</color>
+    <color name="widget_dark">#D9212121</color>
+    <color name="widget_black">#D9000000</color>
 </resources>
