full teacher names

--- a/app/src/main/res/layout/list_vertretung_specific_card.xml
+++ b/app/src/main/res/layout/list_vertretung_specific_card.xml
@@ -60,7 +60,7 @@
                 android:layout_marginStart="8dp"
                 android:gravity="center_vertical"
                 android:text="hour"
-                android:textColor="?android:attr/textColorSecondary"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="52sp" />
 
             <LinearLayout
@@ -102,7 +102,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="room"
-                        android:textColor="?android:attr/textColorSecondary"
+                        android:textColor="?android:attr/textColorPrimary"
                         android:textStyle="bold" />
 
 
