--- a/app/src/main/res/xml/preferences_vertretungsplan.xml
+++ b/app/src/main/res/xml/preferences_vertretungsplan.xml
@@ -22,6 +22,14 @@
         android:defaultValue="true"
         android:key="show_border_specific"
         android:title="@string/set_show_borders_specific" />
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="show_full_names"
+        android:title="@string/set_full_names" />
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="show_full_names_specific"
+        android:title="@string/set_full_names_specific" />
     <SwitchPreference
         android:defaultValue="true"
         android:key="show_sections"
