--- a/app/src/main/res/layout/card_author.xml
+++ b/app/src/main/res/layout/card_author.xml
@@ -18,8 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical"
             android:paddingBottom="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:paddingTop="24dp"
             android:text="@string/author"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -35,8 +35,8 @@
             android:minHeight="@dimen/about_listitem_height"
 
             android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
             <ImageView
                 android:layout_width="24dp"
@@ -75,8 +75,8 @@
             android:gravity="center_vertical"
 
             android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
             <ImageView
                 android:layout_width="24dp"
@@ -108,8 +108,8 @@
             android:gravity="center_vertical"
 
             android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
             <ImageView
                 android:layout_width="24dp"
@@ -142,8 +142,8 @@
             android:gravity="center_vertical"
 
             android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
             <ImageView
                 android:layout_width="24dp"
