--- a/app/src/main/res/layout/list_vertretung_specific_card.xml
+++ b/app/src/main/res/layout/list_vertretung_specific_card.xml
@@ -25,12 +25,11 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp">
 
         <RelativeLayout
