--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
     <release
+        version="1.1.3"
+        versioncode="113">
+        <change>Neue Teilen-Nachricht</change>
+    </release>
+    <release
         version="1.1.2"
         versioncode="112">
         <change>Neues Widget (auch mit Dark-Theme)</change>
