little changes/fixes

--- a/app/src/main/res/layout/list_lehrerliste_entry.xml
+++ b/app/src/main/res/layout/list_lehrerliste_entry.xml
@@ -73,7 +73,8 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:visibility="visible"
-                        android:textColor="?android:attr/textColorSecondary" />
+                        android:textColor="?android:attr/textColorSecondary"
+                        android:textIsSelectable="true" />
 
                 </LinearLayout>
 
