--- a/app/src/main/res/xml/preferences_signin.xml
+++ b/app/src/main/res/xml/preferences_signin.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <EditTextPreference
         android:key="username"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:title="@string/set_vertretung_username" />
+        android:title="@string/set_vertretung_username"
+        app:iconSpaceReserved="false" />
     <EditTextPreference
         android:key="password"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:title="@string/set_vertretung_password" />
+        android:title="@string/set_vertretung_password"
+        app:iconSpaceReserved="false" />
 </PreferenceScreen>
